--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
+      <div class="container">
       <nav class="navi">
         <a href="" class="logo-link"> <span class="adr"> Web </span> Studio</a>
         <ul class="nav-links list">
@@ -26,6 +28,7 @@
           <li ><a href="+380961111111" class="links phon"> +38 096 111 11 11</a></li>
         </ul>
       </nav>
+    </div>
     </header>
     <section class="about" >
       <h2 class="title">эффективные решения для вашего бизнеса</h2>
