--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      
       <nav class="navi">
         <a href="" class="logo-link"> <span class="adr"> Web </span> Studio</a>
         <ul class="nav-links list">
-          <li><a href="./index.html" class="links current">Студия</a></li>
-          <li>
+          <li class="item">
+            <a href="./index.html" class="links current">Студия</a></li>
+          <li class="item">
             <a href="./portfolio.html" class="links">Портфолио</a>
           </li>
-          <li><a href="" class="links">Контакты</a></li>
+          <li class="item"><a href="" class="links">Контакты</a></li>
         </ul>
         <ul class="nav-links list">
-          <li ><a href="info@devstudio.com" class="links emeil">info@devstudio.com</a></li>
-          <li ><a href="+380961111111" class="links phon"> +38 096 111 11 11</a></li>
+          <li class="ite" ><a href="info@devstudio.com" class="links emeil">info@devstudio.com</a></li>
+          <li class="itemsi" ><a href="+380961111111" class="links phon"> +38 096 111 11 11</a></li>
         </ul>
       </nav>
-    </div>
+   
     </header>
     <section class="about" >
-      <h2 class="title">эффективные решения для вашего бизнеса</h2>
-      <a href="" class="button" >Заказать услугу</a>
+      <h2 class="tit">эффективные решения <br>для вашего бизнеса</h2>
+      <a href="" class="buti" >Заказать услугу</a>
     </section>
     <section>
       <h2 class="title garant">Мы гарантируем</h2>
