--- a/portfolio.html
+++ b/portfolio.html
@@ -14,20 +14,23 @@
 
   <body>
     <header>
+      
       <nav class="navi">
         <a href="" class="logo-link"> <span class="adr"> Web </span> Studio</a>
         <ul class="nav-links list">
-          <li ><a href="./index.html" class="links ">Студия</a></li>
-          <li>
-            <a href="./portfolio.html" class="links current">Портфолио</a>
+          <li class="item">
+            <a href="./index.html" class="links current">Студия</a></li>
+          <li class="item">
+            <a href="./portfolio.html" class="links">Портфолио</a>
           </li>
-          <li><a href="" class="links">Контакты</a></li>
+          <li class="item"><a href="" class="links">Контакты</a></li>
         </ul>
         <ul class="nav-links list">
-          <li ><a href="info@devstudio.com" class="links emeil">info@devstudio.com</a></li>
-          <li ><a href="+380961111111" class="links phon"> +38 096 111 11 11</a></li>
+          <li class="ite" ><a href="info@devstudio.com" class="links emeil">info@devstudio.com</a></li>
+          <li class="itemsi" ><a href="+380961111111" class="links phon"> +38 096 111 11 11</a></li>
         </ul>
       </nav>
+   
     </header>
    
       <button type="button">Все</button> 
