--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,8 @@
 
     <section>
       <ul class="spisoc" >
-        <li>
+        <div class="tup">
+          <li>
           <img src="./img/1.jpg" alt="Технокряк" />
           <h1 class="port">Технокряк</h1>
           <p class="name">Веб-сайт</p>
@@ -60,7 +61,8 @@
           <p class="name">Приложение</p>
           <p class="opus">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
         </li>
-        <li>
+      </div>
+        <div class="tup"><li>
           <img src="./img/4.jpg" alt="Проект Prime" />
           <h1 class="port">Проект Prime</h1>
           <p class="name">Маркетинг</p>
@@ -78,7 +80,8 @@
           <p class="name">Веб-сайт</p>
           <p class="opus">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
         </li>
-        <li>
+      </div>
+        <div class="tup"><li>
           <img src="./img/7.jpg" alt="Издание Limited Edition" />
           <h1 class="port">Издание Limited Edition</h1>
           <p class="name">Дизайн</p>
@@ -95,7 +98,7 @@
           <h1 class="port">Growing Business</h1>
           <p class="name">Приложение</p>
           <p class="opus">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-        </li>
+        </li></div>
       </ul>
     </section>
 
