--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -31,14 +28,14 @@
       </nav>
    
     </header>
-    <section class="about" >
+    <section class="about">
       <h2 class="tit">эффективные решения <br>для вашего бизнеса</h2>
-      <a href="" class="buti" >Заказать услугу</a>
+      <a href="" class="buti">Заказать услугу</a>
     </section>
-    <section>
+    <section class="about">
       <h2 class="title garant">Мы гарантируем</h2>
-      <ul>
-        <li>
+      <ul class="line-blok">
+        <li class="doit">
           <img src="./img/antenna1.svg" alt="антена" />
           <h2 class="title">Внимание к деталям.</h2>
           <p>
@@ -46,7 +43,7 @@
             формированию позиции.
           </p>
         </li>
-        <li>
+        <li class="doit">
           <img src="./img/clock1.svg" alt="часы" />
           <h2 class="title">Пунктуальность</h2>
           <p>
@@ -54,7 +51,7 @@
             влечет за собой.
           </p>
         </li>
-        <li>
+        <li class="doit">
           <img src="./img/Vector.svg" alt="компютер" />
           <h2 class="title">Планирование</h2>
           <p>
@@ -62,7 +59,7 @@
             обуславливает.
           </p>
         </li>
-        <li>
+        <li class="doit">
           <img src="./img/astronaut1.svg" alt="космонавт" />
           <h2 class="title">Современные технологии</h2>
           <p>
@@ -72,27 +69,27 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="about">
       <h2 class="title garant">Чем мы занимаемся</h2>
-      <ul>
-        <li>
+      <ul class="line-blok">
+        <li class="doit-now">
           <img src="./img/nout.jpg" alt="ноутбук" width="380" />
           <h2 class="title">Десктопные приложения</h2>
         </li>
-        <li>
+        <li  class="doit-now">
           <img src="./img/phone.jpg" alt="телефон" width="380" />
           <h2 class="title">Мобильные приложения</h2>
         </li>
-        <li>
+        <li class="doit-now">
           <img src="./img/monic.jpg" alt="монитор" width="380" />
           <h2 class="title">Дизайнерские решения</h2>
         </li>
       </ul>
     </section>
-    <section class="comamda">
+    <section class="about comamda">
       <h2 class="title garant">Наша команда</h2>
-      <ul class="social-links">
-        <li>
+      <ul class="line-blok">
+        <li class="doit-now">
           <img src="./img/jon.jpg" alt="фото" width="278" />
           <h3 class="title">Джон Смит</h3>
           <p>Product Designer</p>
@@ -103,7 +100,7 @@
             <li><a href="" class="links" >Ld</a></li>
           </ul>
         </li>
-        <li>
+        <li class="doit-now">
           <img src="./img/marta.jpg" alt="фото" width="278" />
           <h3 class="title">Марта Стеварт</h3>
           <p>Frontend Developer</p>
@@ -115,7 +112,7 @@
             <li><a href="" class="links">Ld</a></li>
           </ul>
         </li>
-        <li>
+        <li class="doit-now">
           <img src="./img/robert.jpg" alt="фото" width="278" />
           <h3 class="title">Роберт Джеклс</h3>
           <p>Marketing</p>
@@ -141,24 +138,26 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="about">
       <h3 class="title garant">Постоянные клиенты</h3>
-      <ul>
-        <li><img src="./img/logo1.svg" alt="" /></li>
-        <li><img src="./img/logo2.svg" alt="" /></li>
-        <li><img src="./img/logo3.svg" alt="" /></li>
-        <li><img src="./img/logo4.svg" alt="" /></li>
-        <li><img src="./img/logo5.svg" alt="" /></li>
-        <li><img src="./img/logo6.svg" alt="" /></li>
+      <ul class="line-blok">
+        <li class="client"><img src="./img/logo1.svg" alt="" /></li>
+        <li class="client"><img src="./img/logo2.svg" alt="" /></li>
+        <li class="client"><img src="./img/logo3.svg" alt="" /></li>
+        <li class="client"><img src="./img/logo4.svg" alt="" /></li>
+        <li class="client"><img src="./img/logo5.svg" alt="" /></li>
+        <li class="client"><img src="./img/logo6.svg" alt="" /></li>
       </ul>
     </section>
     <footer>
-      <a href="" class="logo-lin" ><span class="adr">Web</span> Studio</a>
+     <div class="foot"> 
+       <a href="" class="logo-lin"><span class="adr">Web</span> Studio</a>
       <address>
         г. Киев, пр-т Леси Украинки, 26 <br />
         <a href="info@example.com" class="lists">info@example.com</a> </br>
         <a href="+380991111111" class="lists">+38 099 111 11 11</a>
       </address>
+    
       <h3 class="down" >присоединяйтесь</h3>
       <ul class="nav-links ">
         <li><a href="" class="links futer">Instagram</a></li>
@@ -168,6 +167,7 @@
       </ul>
       <h4 class="down" >Подпишитесь на рассылку</h4>
       <h4 class="button">Подписаться</h4>
+    </div>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
