--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
    
     </header>
-    <section class="about">
+    <section class="aboute">
       <h2 class="tit">эффективные решения <br>для вашего бизнеса</h2>
       <a href="" class="buti">Заказать услугу</a>
     </section>
