--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,8 @@
           <p class="opus">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
         </li>
       </div>
-        <div class="tup"><li>
+        <div class="tup">
+          <li>
           <img src="./img/4.jpg" alt="Проект Prime" />
           <h1 class="port">Проект Prime</h1>
           <p class="name">Маркетинг</p>
@@ -81,7 +82,8 @@
           <p class="opus">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
         </li>
       </div>
-        <div class="tup"><li>
+        <div class="tup">
+          <li>
           <img src="./img/7.jpg" alt="Издание Limited Edition" />
           <h1 class="port">Издание Limited Edition</h1>
           <p class="name">Дизайн</p>
@@ -98,7 +100,8 @@
           <h1 class="port">Growing Business</h1>
           <p class="name">Приложение</p>
           <p class="opus">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-        </li></div>
+        </li>
+      </div>
       </ul>
     </section>
 
