--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <header>
-      
-      <nav class="navi">
-        <a href="" class="logo-link"> <span class="adr"> Web </span> Studio</a>
+      <div class="head">
+      <nav class="nav">
+        <a href="" class="logo-link"> <span class="web"> Web </span> Studio</a>
         <ul class="nav-links list">
           <li class="item">
             <a href="./index.html" class="links current">Студия</a></li>
@@ -21,54 +21,61 @@
           </li>
           <li class="item"><a href="" class="links">Контакты</a></li>
         </ul>
+      </nav>
         <ul class="nav-links list">
-          <li class="ite" ><a href="info@devstudio.com" class="links emeil">info@devstudio.com</a></li>
+          <li class="item" ><a href="info@devstudio.com" class="links emeil">info@devstudio.com</a></li>
           <li class="itemsi" ><a href="+380961111111" class="links phon"> +38 096 111 11 11</a></li>
         </ul>
-      </nav>
+      </div>
    
     </header>
-    <section class="aboute">
-      <h2 class="tit">эффективные решения <br>для вашего бизнеса</h2>
-      <a href="" class="buti">Заказать услугу</a>
-    </section>
-    <section class="about">
-      <h2 class="title garant">Мы гарантируем</h2>
+    <div class="abo">
+      <section >
+        <h2 class="tit">эффективные решения <br>для вашего бизнеса</h2>
+        <a href="" class="buti">Заказать услугу</a>
+      </section>
+    </div>
+    
+      <div class="container">
+        <section class="">
+      <!-- <h2 class="title garant">Мы гарантируем</h2> -->
       <ul class="line-blok">
         <li class="doit">
-          <img src="./img/antenna1.svg" alt="антена" />
+          <img class="pic" src="./img/antenna1.svg" alt="антена" />
           <h2 class="title">Внимание к деталям.</h2>
-          <p>
+          <p class="txt">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
         <li class="doit">
-          <img src="./img/clock1.svg" alt="часы" />
+          <img class="pic" src="./img/clock1.svg" alt="часы" />
           <h2 class="title">Пунктуальность</h2>
-          <p>
+          <p class="txt">
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
           </p>
         </li>
         <li class="doit">
-          <img src="./img/Vector.svg" alt="компютер" />
+          <img class="pic" src="./img/Vector.svg" alt="компютер" />
           <h2 class="title">Планирование</h2>
-          <p>
+          <p class="txt">
             Равным образом консультация с широким активом в значительной степени
             обуславливает.
           </p>
         </li>
         <li class="doit">
-          <img src="./img/astronaut1.svg" alt="космонавт" />
+          <img class="pic" src="./img/astronaut1.svg" alt="космонавт" />
           <h2 class="title">Современные технологии</h2>
-          <p>
+          <p class="txt">
             Значимость этих проблем настолько очевидна, что реализация плановых
             заданий.
           </p>
         </li>
       </ul>
     </section>
+   </div>
+  <div class="container"> 
     <section class="about">
       <h2 class="title garant">Чем мы занимаемся</h2>
       <ul class="line-blok">
@@ -85,7 +92,7 @@
           <h2 class="title">Дизайнерские решения</h2>
         </li>
       </ul>
-    </section>
+    </section></div>
     <section class="about comamda">
       <h2 class="title garant">Наша команда</h2>
       <ul class="line-blok">
