--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
       </div>
    
     </header>
-    <div class="abo">
-      <section >
+   
+      <section class="abo">
         <h2 class="tit">эффективные решения <br>для вашего бизнеса</h2>
-        <a href="" class="buti">Заказать услугу</a>
+        <a href="" class="buti knop">Заказать услугу</a>
       </section>
-    </div>
-    
+       
       <div class="container">
         <section class="">
       <!-- <h2 class="title garant">Мы гарантируем</h2> -->
@@ -76,19 +75,19 @@
     </section>
    </div>
   <div class="container"> 
-    <section class="about">
-      <h2 class="title garant">Чем мы занимаемся</h2>
+    <section>
+      <h2 class="garant">Чем мы занимаемся</h2>
       <ul class="line-blok">
         <li class="doit-now">
-          <img src="./img/nout.jpg" alt="ноутбук" width="380" />
+          <img src="./img/nout.jpg" alt="ноутбук" width="370" />
           <h2 class="title">Десктопные приложения</h2>
         </li>
         <li  class="doit-now">
-          <img src="./img/phone.jpg" alt="телефон" width="380" />
+          <img src="./img/phone.jpg" alt="телефон" width="370" />
           <h2 class="title">Мобильные приложения</h2>
         </li>
         <li class="doit-now">
-          <img src="./img/monic.jpg" alt="монитор" width="380" />
+          <img src="./img/monic.jpg" alt="монитор" width="370" />
           <h2 class="title">Дизайнерские решения</h2>
         </li>
       </ul>
