--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
+  
+  
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap"
-      rel="stylesheet"
-    />
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -40,10 +40,10 @@
       <button type="button">Дизайн</button> 
       <button type="button">Маркетинг</button> 
    
-    <div class="container">
-      <div class="box">
-    <section >
-      <ul class="ol line-blok">
+    <!-- <div class=""> -->
+      <div >
+    <section class="container">
+      <ul class="line-blok">
         
           <li class="doit-now">
           <img src="./img/1.jpg" alt="Технокряк" />
