--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div class="head">
+      <div class="head box">
       <nav class="nav">
         <a href="" class="logo-link"> <span class="web"> Web </span> Studio</a>
         <ul class="nav-links list">
