--- a/portfolio.html
+++ b/portfolio.html
@@ -33,17 +33,17 @@
     </div>
   
   </header>
-   
+   <div class="knopka">
       <button type="button">Все</button> 
       <button type="button">Веб-сайты</button> 
       <button type="button">Приложения</button> 
       <button type="button">Дизайн</button> 
       <button type="button">Маркетинг</button> 
-   
-    <!-- <div class=""> -->
-      <div >
-    <section class="container">
-      <ul class="line-blok">
+   </div>
+    
+      <div class="containe">
+    <section class="box">
+      <ul class="line-blo">
         
           <li class="doit-now">
           <img src="./img/1.jpg" alt="Технокряк" />
@@ -51,49 +51,49 @@
           <p class="name">Веб-сайт</p>
           <p></p>
         </li>
-        <li class="">
+        <li class="doit-now">
           <img src="./img/2.jpg" alt="Постер New Orlean vs Golden Stars" />
          <h1 class="port">Постер New Orlean vs Golden Star</h1>
           <p class="name">Дизайн</p>
           <p></p>
         </li>
-        <li class="">
+        <li class="doit-now">
           <img src="./img/3.jpg" alt="Ресторан Seafood" />
           <h1 class="port">Ресторан Seafood</h1>
           <p class="name">Приложение</p>
           <p></p>
         </li>
-          <li class="">
+          <li class="doit-now">
           <img src="./img/4.jpg" alt="Проект Prime" />
           <h1 class="port">Проект Prime</h1>
           <p class="name">Маркетинг</p>
           <p></p>
         </li>
-        <li class="">
+        <li class="doit-now">
           <img src="./img/5.jpg" alt="Проект Boxes" />
           <h1 class="port">Проект Boxes</h1>
           <p class="name">Приложение</p>
           <p></p>
         </li>
-        <li class="">
+        <li class="doit-now">
           <img src="./img/6.jpg" alt="Inspiration has no Borders" />
           <h1 class="port">Inspiration has no Borders</h1>
           <p class="name">Веб-сайт</p>
           <p></p>
         </li>
-          <li class="">
+          <li class="doit-now">
           <img src="./img/7.jpg" alt="Издание Limited Edition" />
           <h1 class="port">Издание Limited Edition</h1>
           <p class="name">Дизайн</p>
           <p></p>
         </li>
-        <li class="">
+        <li class="doit-now">
           <img src="./img/8.jpg" alt="Проект LAB" />
           <h1 class="port">Проект LAB</h1>
           <p class="name">Маркетинг</p>
           <p></p>
         </li>
-        <li class="">
+        <li class="doit-now">
           <img src="./img/9.jpg" alt="Growing Business" />
           <h1 class="port">Growing Business</h1>
           <p class="name">Приложение</p>
@@ -103,7 +103,7 @@
       </ul>
     </section>
     </div>
-  </div>
+  
       <footer>
         <div class="foot">
           <a href="" class="logo-link"><span class="web">Web</span> <span class="stud">Studio</span></a>
