--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li class="doit">
           <img class="pic" src="./img/astronaut1.svg" alt="космонавт" />
           <h2 class="title">Современные технологии</h2>
-          <p class="txt">
+          <p class="txtt">
             Значимость этих проблем настолько очевидна, что реализация плановых
             заданий.
           </p>
@@ -80,15 +80,15 @@
       <ul class="line-blok">
         <li class="doit-now">
           <img src="./img/nout.jpg" alt="ноутбук" width="370" />
-          <h2 class="title">Десктопные приложения</h2>
+          <h2 class="transp">Десктопные приложения</h2>
         </li>
         <li  class="doit-now">
           <img src="./img/phone.jpg" alt="телефон" width="370" />
-          <h2 class="title">Мобильные приложения</h2>
+          <h2 class="transp">Мобильные приложения</h2>
         </li>
         <li class="doit-now">
           <img src="./img/monic.jpg" alt="монитор" width="370" />
-          <h2 class="title">Дизайнерские решения</h2>
+          <h2 class="transp">Дизайнерские решения</h2>
         </li>
       </ul>
     </section></div>
@@ -98,7 +98,7 @@
       <h2 class="title garant">Наша команда</h2>
       <ul class="line-blok ">
         <li class="doit-now card">
-          <img src="./img/jon.jpg" alt="фото" width="278" />
+          <img src="./img/jon.jpg" alt="фото" width="270" />
           <h3 class="title">Джон Смит</h3>
           <p class="titles">Product Designer</p>
           <ul class="nav-links" >
@@ -109,7 +109,7 @@
           </ul>
         </li>
         <li class="doit-now card">
-          <img src="./img/marta.jpg" alt="фото" width="278" />
+          <img src="./img/marta.jpg" alt="фото" width="270" />
           <h3 class="title">Марта Стеварт</h3>
           <p class="titles">Frontend Developer</p>
 
@@ -121,7 +121,7 @@
           </ul>
         </li>
         <li class="doit-now card">
-          <img src="./img/robert.jpg" alt="фото" width="278" />
+          <img src="./img/robert.jpg" alt="фото" width="270" />
           <h3 class="title">Роберт Джеклс</h3>
           <p class="titles">Marketing</p>
 
@@ -133,8 +133,8 @@
           </ul>
         </li>
         <li class="doit-now card">
-          <img src="./img/martin.jpg" alt="фото" width="278" />
-          <h3 class="title">Мартін Доу</h3>
+          <img src="./img/martin.jpg" alt="фото" width="270" />
+          <h3 class="centr">Мартін Доу</h3>
           <p class="titles">UI Designer</p>
 
           <ul class="nav-links">
