--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
   <body>
   <header>
-    <div class="head">
+    <div class="head box">
       <nav class="nav">
         <a href="" class="logo-link"> <span class="web"> Web </span> Studio</a>
         <ul class="nav-links list">
