--- a/portfolio.html
+++ b/portfolio.html
@@ -34,18 +34,18 @@
   
   </header>
    <div class="knopka">
-      <button type="button">Все</button> 
-      <button type="button">Веб-сайты</button> 
-      <button type="button">Приложения</button> 
-      <button type="button">Дизайн</button> 
-      <button type="button">Маркетинг</button> 
+      <button class="knopk" type="button">Все</button> 
+      <button class="knopk" type="button">Веб-сайты</button> 
+      <button class="knopk" type="button">Приложения</button> 
+      <button class="knopk" type="button">Дизайн</button> 
+      <button class="knopk" type="button">Маркетинг</button> 
    </div>
     
       <div class="containe">
     <section class="box">
       <ul class="line-blo">
         
-          <li class="doit-now">
+          <li class="doit-now work">
           <img src="./img/1.jpg" alt="Технокряк" />
           <h1 class="port">Технокряк</h1>
           <p class="name">Веб-сайт</p>
