--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
       <section class="box">
       <h3 class="garant">Постоянные клиенты</h3>
       <ul class="line-blok">
-        <li class="client"><img class="centr" src="./img/logo1.svg" alt="" /></li>
-        <li class="client"><img class="centr" src="./img/logo2.svg" alt="" /></li>
-        <li class="client"><img class="centr" src="./img/logo3.svg" alt="" /></li>
-        <li class="client"><img class="centr" src="./img/logo4.svg" alt="" /></li>
-        <li class="client"><img class="centr" src="./img/logo5.svg" alt="" /></li>
-        <li class="client"><img class="centr" src="./img/logo6.svg" alt="" /></li>
+        <li class="client"><img class="cent" src="./img/logo1.svg" alt="" /></li>
+        <li class="client"><img class="cent" src="./img/logo2.svg" alt="" /></li>
+        <li class="client"><img class="cent" src="./img/logo3.svg" alt="" /></li>
+        <li class="client"><img class="cent" src="./img/logo4.svg" alt="" /></li>
+        <li class="client"><img class="cent" src="./img/logo5.svg" alt="" /></li>
+        <li class="client"><img class="cent" src="./img/logo6.svg" alt="" /></li>
       </ul>
     </section>
     </div>
@@ -177,8 +177,8 @@
             <li class="social"><img src="./img/facebook 1.svg" alt="Faceboock"><a href="" class="links"></a></li>
             <li class="social"><img src="./img/linkedin 1.svg" alt="Linken ID"><a href="" class="links"></a></li>
           </ul>
-      <h4 class="down" >Подпишитесь на рассылку</h4>
-      <h4 class="buti">Подписаться</h4>
+      <!-- <h4 class="down" >Подпишитесь на рассылку</h4>
+      <h4 class="buti">Подписаться</h4> -->
     </div>
       <p class="stu">2020 | Developed by GoIT Students</p>
     </footer>
