--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
         <a href="" class="logo-link"> <span class="web"> Web </span> Studio</a>
         <ul class="nav-links list">
           <li class="item">
-            <a href="./index.html" class="links current">Студия</a></li>
+            <a href="./index.html" class="links">Студия</a></li>
           <li class="item">
-            <a href="./portfolio.html" class="links">Портфолио</a>
+            <a href="./portfolio.html" class="links current">Портфолио</a>
           </li>
           <li class="item"><a href="" class="links">Контакты</a></li>
         </ul>
