--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     <section class="box">
       <ul class="line-blo">
         
-          <li class="doit-now work">
+          <li class="doit-now">
           <img src="./img/1.jpg" alt="Технокряк" />
           <h1 class="port">Технокряк</h1>
           <p class="name">Веб-сайт</p>
@@ -104,26 +104,32 @@
     </section>
     </div>
   
-      <footer>
-        <div class="foot">
-          <a href="" class="logo-link"><span class="web">Web</span> <span class="stud">Studio</span></a>
-          <address>
-            г. Киев, пр-т Леси Украинки, 26 <br />
-            <a href="info@example.com" class="lists">info@example.com</a> </br>
-            <a href="+380991111111" class="lists">+38 099 111 11 11</a>
-          </address>
-      
-          <h3 class="down">присоединяйтесь</h3>
-          <ul class="nav-links">
-            <li class="social"><img src="./img/instagram2.svg" alt="Instagram"><a href="" class="links"></a></li>
-            <li class="social"><img src="./img/twit.svg" alt="Twitter"><a href="" class="links"></a></li>
-            <li class="social"><img src="./img/facebook 1.svg" alt="Faceboock"><a href="" class="links"></a></li>
-            <li class="social"><img src="./img/linkedin 1.svg" alt="Linken ID"><a href="" class="links"></a></li>
-          </ul>
-          <h4 class="down">Подпишитесь на рассылку</h4>
-          <h4 class="buti">Подписаться</h4>
-        </div>
-        <p class="stu">2020 | Developed by GoIT Students</p>
-      </footer>
+  <footer>
+    <div class="foot">
+      <div class="one">
+        <a href="" class="logo-link"><span class="web">Web</span> <span class="stud">Studio</span></a>
+        <address>
+          г. Киев, пр-т Леси Украинки, 26 <br />
+          <a href="info@example.com" class="lists">info@example.com</a> </br>
+          <a href="+380991111111" class="lists">+38 099 111 11 11</a>
+        </address>
+      </div>
+      <div class="one">
+        <h3 class="down">присоединяйтесь</h3>
+        <ul class="nav-lin">
+          <li class="social"><img src="./img/instagram2.svg" alt="Instagram"><a href="" class="links"></a></li>
+          <li class="social"><img src="./img/twit.svg" alt="Twitter"><a href="" class="links"></a></li>
+          <li class="social"><img src="./img/facebook 1.svg" alt="Faceboock"><a href="" class="links"></a></li>
+          <li class="social"><img src="./img/linkedin 1.svg" alt="Linken ID"><a href="" class="links"></a></li>
+        </ul>
+      </div>
+      <div class="two">
+        <h4 class="down">Подпишитесь на рассылку</h4>
+        <h4 class="buti">Подписаться</h4>
+      </div>
+    </div>
+    <p class="stu">2020 | Developed by GoIT Students</p>
+  </footer>
   </body>
-</html>
+  
+  </html>
