--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
     </section>
 
     
-    <section class="container bk">
-    <div class="">
+    <section class="bk">
+    <div class="container">
         <div class="col">  
           <h2 class="comand">Наша команда</h2>
           <ul class="line-blok">
             <li class="doit-now card">
               <img src="./img/jon.jpg" alt="фото" width="270" />
-              <h3 class="title">Джон Смит</h3>
+              <h3 class="title lhm">Джон Смит</h3>
               <p class="titles">Product Designer</p>
               <ul class="nav-lin">
                 <li class="social">
@@ -156,7 +156,7 @@
             </li>
             <li class="doit-now card">
               <img src="./img/marta.jpg" alt="фото" width="270" />
-              <h3 class="title">Марта Стеварт</h3>
+              <h3 class="title lhm">Марта Стеварт</h3>
               <p class="titles">Frontend Developer</p>
 
               <ul class="nav-lin">
@@ -184,7 +184,7 @@
             </li>
             <li class="doit-now card">
               <img src="./img/robert.jpg" alt="фото" width="270" />
-              <h3 class="title">Роберт Джеклс</h3>
+              <h3 class="title lhm">Роберт Джеклс</h3>
               <p class="titles">Marketing</p>
 
               <ul class="nav-lin">
@@ -212,7 +212,7 @@
             </li>
             <li class="doit-now card">
               <img src="./img/martin.jpg" alt="фото" width="270" />
-              <h3 class="title">Мартін Доу</h3>
+              <h3 class="title lhm">Мартін Доу</h3>
               <p class="titles">UI Designer</p>
 
               <ul class="nav-lin">
@@ -239,9 +239,10 @@
               </ul>
             </li>
           </ul>
-        </section>
-       </div>
+         </div>
       </div>
+    </section>
+      
    
 
     <section class="container">
