--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="web"> Web </span> Studio</a
           >
           <ul class="nav-links list">
-            <li class="item">
+            <li class="item line">
               <a href="./index.html" class="links current">Студия</a>
             </li>
             <li class="item">
@@ -122,7 +122,7 @@
     </section>
 
     
-    <section class="bk">
+    <section class=" bk">
     <div class="container">
         <div class="col">  
           <h2 class="comand">Наша команда</h2>
@@ -295,9 +295,9 @@
             <a href="+380991111111" class="lists">+38 099 111 11 11</a>
            </div>
         </div>
-        <div class="one">
+        <div class="onece">
           <h3 class="down vel">присоединяйтесь</h3>
-          <ul class="nav-lin">
+          <ul class="nav-lin marg">
             <li class="socia">
               <svg class="soc">
                 <use href="./img/sprite.svg#icon-instagram2"></use>
@@ -322,7 +322,7 @@
         </div>
         <div class="two">
           <h4 class="down left">Подпишитесь на рассылку</h4>
-          <h4 class="fly">Подписаться</h4>
+          <div class="ryad"><div class="enter"></div><h4 class="fly">Подписаться</h4></div>
         </div>
       </div>
       <p class="stu">2020 | Developed by GoIT Students</p>
