--- a/portfolio.html
+++ b/portfolio.html
@@ -136,9 +136,9 @@
               <a href="+380991111111" class="lists">+38 099 111 11 11</a>
              </div>
           </div>
-          <div class="one">
+          <div class="onece">
             <h3 class="down vel">присоединяйтесь</h3>
-            <ul class="nav-lin">
+            <ul class="nav-lin marg">
               <li class="socia">
                 <svg class="soc">
                   <use href="./img/sprite.svg#icon-instagram2"></use>
@@ -163,7 +163,7 @@
           </div>
           <div class="two">
             <h4 class="down left">Подпишитесь на рассылку</h4>
-            <h4 class="fly">Подписаться</h4>
+            <div class="ryad"><div class="enter"></div><h4 class="fly">Подписаться</h4></div>
           </div>
         </div>
         <p class="stu">2020 | Developed by GoIT Students</p>
