--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
               <a href="./index.html" class="links">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="links current">Портфолио</a>
+              <a href="./portfolio.html" class="links current polosa">Портфолио</a>
             </li>
             <li class="item"><a href="" class="links">Контакты</a></li>
           </ul>
