--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <span class="web"> Web </span> Studio</a
           >
           <ul class="nav-links list">
-            <li class="item line">
-              <a href="./index.html" class="links current">Студия</a>
+            <li class="item hey">
+              <a href="./index.html" class="links current polosa">Студия</a>
             </li>
             <li class="item">
               <a href="./portfolio.html" class="links">Портфолио</a>
