--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       </div>
     </header>
 <main>
-<section>
+<section class="psp">
     <div class="knopka">
       <button class="knopk bi" type="button">Все</button>
       <button class="knopk bi" type="button">Веб-сайты</button>
@@ -124,6 +124,7 @@
       </div>
       </section>
       </main>
+
       <footer>
         <div class="foot">
           <div class="one">
@@ -161,11 +162,13 @@
               </li>
             </ul>
           </div>
-          <div class="two">
+          <div>
             <h4 class="down left">Подпишитесь на рассылку</h4>
-            <div class="ryad"><div class="enter"></div><h4 class="fly">Подписаться</h4></div>
+           <div class="two"> <input class="enter">
+            <h4 class="fly">Подписаться</h4>
           </div>
         </div>
+      </div>
         <p class="stu">2020 | Developed by GoIT Students</p>
       </footer>
     </body>
