--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
       <div class="">
         <h2 class="garant">Чем мы занимаемся</h2>
         <ul class="line-blok">
-          <li class="doit-now">
+          <li class="doit-now cor">
             <img src="./img/nout.jpg" alt="ноутбук" width="370px" height="294px" />
             <h3 class="transp">Десктопные приложения</h3>
           </li>
-          <li class="doit-now">
+          <li class="doit-now cor">
             <img src="./img/phone.jpg" alt="телефон" width="370px" height="294px" />
             <h3 class="transp">Мобильные приложения</h3>
           </li>
-          <li class="doit-now">
+          <li class="doit-now cor">
             <img src="./img/monic.jpg" alt="монитор" width="370px" height="294px" />
             <h3 class="transp">Дизайнерские решения</h3>
           </li>
